# birdhouse-tinyml-kd

./: .gitignore  README.md
configs/: binary_collapse_config.yaml  teacher_config.yaml
docs/: 00_project_context.md  01_teacher_audit_summary.md  02_teacher_verification_and_recovery.md  03_distillation_plan.md  04_reproducibility_notes.md  05_student_design_review_claude.md  06_student_design_decision.md  07_student_baseline_plan.md  08_student_baseline_v2_plan.md  09_student_kd_binary_v1_plan.md  10_student_kd_weight_sweep_plan.md  11_final_student_export_plan.md  12_final_student_model_card.md  14_embedded_preprocessing_plan.md  15_preprocess_parity_test.md  16_tflite_micro_model_asset_plan.md  17_esp32s3_tflm_smoke_test.md  18_esp32s3_preprocess_inference_test.md  19_optimized_fft_preprocessing.md  PROJECT_EXECUTIVE_SUMMARY_2P.md  PROJECT_STATUS_AND_NEXT_STEP.md  TEACHER_STUDENT_OOF_COMPARISON.md  teacher_audit_report_raw.md
firmware/esp32s3_preprocess_inference/main/: CMakeLists.txt  idf_component.yml  main.cc
student/: README.md  export_student_5s_final_to_tflite.py  run_student_5s_kd_weight_sweep.sh  summarize_student_5s_kd_weight_sweep.py  train_student_5s_final_kd_export.py  train_student_5s_hardlabel_baseline.py  train_student_5s_hardlabel_baseline_v2.py  train_student_5s_kd_binary_sweep_wrapper.py  train_student_5s_kd_binary_v1.py
teacher_kd/: README.md  confusion_matrix.csv  generate_soft_labels.py  recover_teacher_label_permutation.py  recovered_confusion_raw.csv  recovered_confusion_remapped.csv  recovered_permutation_report.md  verified_label_map.json  (+4 more)
(+72 files in other folders)
