idf_component_register(
  SRCS
    "main.cc"
    "../../preprocess/audio_preprocess.cc"
    "../../preprocess/mel_filterbank.cc"
    "../../inference/bird_model.cc"
    "../../model/student_final_int8_model_data.cc"
  INCLUDE_DIRS
    "."
    "../../.."
  REQUIRES
    espressif__esp-tflite-micro
    espressif__esp-dsp
    esp_timer
    heap
)
